[tool.poetry]
name = "ekklesia-portal"
version = "20.07.0"
description = "Motion portal for the Ekklesia e-democracy platform"
readme = "README.md"
keywords = ["ekklesia", "edemocracy", "argument mapping", "evoting", "participation"]
license = "AGPL-3.0-or-later"
authors = ["Tobias dpausp <dpausp@posteo.de>"]
classifiers = [
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8"
]

[tool.poetry.dependencies]
python = "^3.8"
alembic = "^1.4.2"
dataclasses-json = "^0.4.3"
passlib = "^1.7.2"
psycopg2 = "^2.8.5"
sqlalchemy-searchable = "^1.1.0"
ekklesia-common = {git = "https://github.com/Piratenpartei/ekklesia-common"}

[tool.poetry.dev-dependencies]
colorama = "^0.4.3"
coverage = "^5.1"
mimesis-factory = "^1.1.0"
pytest = "^5.4.2"
pytest-cov = "^2.8.1"
pytest-factoryboy = "^2.0.3"
pytest-instafail = "^0.4.1"
pytest-localserver = "^0.5.0"
pytest-mock = "^3.1.0"
pytest-pspec = "^0.0.3"
responses = "^0.10.14"
typing-extensions = "^3.7.4"
webtest = "^2.0.35"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
