[metadata]
name = ekklesia-portal
description = portal component of the Ekklesia eDemocracy system
author = dpausp
author_email = dpausp@posteo.de
license = GNU Affero General Public License v3 or later (AGPLv3+)
classifiers =
  License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
  License :: OSI Approved :: GNU General Public License v3 (GPLv3)
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6

keywords = argument, argument maping, debate, portal, ekklesia, evoting, edemocracy, democracy, voting

[tool:pytest]
norecursedirs=tests/helpers
testpaths = tests

[pylama:pycodestyle]
max_line_length = 140
